--- a/src/projects/Load-More-Data/style.css
+++ b/src/projects/Load-More-Data/style.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .wrapper {
   min-height: 100vh;
   width: 95%;
@@ -49,4 +55,20 @@
   color: white;
   font-weight: bold;
   font-size: 20px;
+}
+
+@media (max-width: 992px) {
+  .products {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 768px) {
+  .products {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 500px) {
+  .products {
+    grid-template-columns: 1fr;
+  }
 }
