--- a/src/projects/Github Profile Finder/style.scss
+++ b/src/projects/Github Profile Finder/style.scss
@@ -2,3 +2,10 @@
   padding: 0;
   margin: 0;
 }
+
+.wrapper {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
